Creata struttura principale

--- a/index.html
+++ b/index.html
@@ -10,6 +10,41 @@
 </head>
 <body>
     
+    <!-- APP -->
+    <div class="app-container">
+
+        <!-- HEADER -->
+        <header>
+
+            <!-- Left -->
+            <div class="header-left">
+                <img src="img/logo.png" alt="logo">
+                <h1>Campo minato: la griglia</h1>
+            </div>
+
+            <!-- Right -->
+            <div class="header-right">
+                <label for="choice">Difficoltà:</label>
+                <select name="choice" id="choice">
+                    <option value="facile">facile</option>
+                    <option value="medio">medio</option>
+                    <option value="difficile">difficile</option>
+                </select>
+                <input type="button" value="play">
+            </div>
+        </header>
+
+        <main>
+            <div class="grid">
+                <div class="square"></div>
+            </div>
+        </main>
+
+        <footer>
+            <span>made with</span>
+        </footer>
+
+    </div>
 
     <script type="text/javascript" src="js/script.js"></script>
 </body>
