Creata struttura griglia e box

--- a/index.html
+++ b/index.html
@@ -34,9 +34,17 @@
             </div>
         </header>
 
+        <!-- MAIN -->
         <main>
+
+            <!-- Game Grid -->
             <div class="grid">
-                <div class="square"></div>
+
+                <!-- square -->
+                <div class="square square-7">
+                    <span></span>
+                </div>
+                
             </div>
         </main>
 
