Aggiunti i numeri dentro gli square

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </select>
 
                 <!-- Play Button -->
-                <input type="button" value="play">
+                <input id="play-button" type="button" value="play">
             </div>
         </header>
 
@@ -44,10 +44,10 @@
             <!-- Game Grid -->
             <div class="grid">
 
-                <!-- square -->
-                <div class="square square-7">
-                    <span></span>
-                </div>
+                <!-- square
+                <div class="square square-7 active">
+                    <span>1</span>
+                </div> -->
 
             </div>
         </main>
