Abbellito con prorpietà css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <!-- Header Left -->
             <div class="header-left">
                 <img src="img/logo.png" alt="logo">
-                <h1>Campo minato: la griglia</h1>
+                <h1>Campo Minato: la Griglia</h1>
             </div>
 
             <!-- Header Right -->
@@ -28,13 +28,13 @@
                 <!-- Select -->
                 <label for="choice">Difficoltà:</label>
                 <select class="choice-list" name="choice" id="choice">
-                    <option value="easy">facile</option>
-                    <option value="hard">medio</option>
-                    <option value="crazy">difficile</option>
+                    <option value="easy">Easy</option>
+                    <option value="hard">Hard</option>
+                    <option value="crazy">Crazy</option>
                 </select>
 
                 <!-- Play Button -->
-                <input id="play-button" type="button" value="play">
+                <input id="play-button" type="button" value="Play">
             </div>
         </header>
 
@@ -53,7 +53,7 @@
         </main>
 
         <footer>
-            <span>made with</span>
+            <span>Made with &hearts; by <a href="https://www.boolean.careers/" target="_blank">Boolean</a></span>
         </footer>
 
     </div>
