Aggiunto titolo di inizio gioco

--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
         <!-- MAIN -->
         <main>
 
+            <h2 id="game-title" class="">Seleziona il livello di difficoltà e genera la griglia</h2>
+
             <!-- Game Grid -->
-            <div class="grid">
+            <div class="grid hidden">
 
                 <!-- square
                 <div class="square square-7 active">
